tests/ui/coroutine/pattern-borrow.stderr
error[E0626]: borrow may still be in use when coroutine yields
  --> $DIR/pattern-borrow.rs:9:24
   |
LL |       #[coroutine] move || {
   |  __________________-
LL | |         if let Test::A(ref _a) = test {
   | |                        ^^^^^^
LL | |             yield ();
   | |             -------- possible yield occurs here
LL | |             _a.use_ref();
LL | |         }
LL | |     };
   | |_____- within this coroutine
   |
help: add `static` to mark this coroutine as unmovable
   |
LL |     #[coroutine] static move || {
   |                  ++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0626`.
